fixing gap between cards item

--- a/src/components/DesignHero/designhero.scss
+++ b/src/components/DesignHero/designhero.scss
@@ -1,7 +1,6 @@
 @import "../../styles/abstracts/mixins";
 
 .design-hero {
-  margin: 6.4rem 0;
   width: 100%;
   height: 25.2rem;
   border-radius: 1rem;
