--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -3,4 +3,16 @@
     width: 100%;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin: 4rem 0;
+
+    gap: 4rem;
+    // display: inline-flex;
+    // flex-wrap: wrap;
+    // margin: -12px 0 0 -12px;
+    // width: calc(100% + 12px);
+}
+
+.portfolio > * {
+    // margin: 12px 0 0 12px;
+
 }
