--- a/src/components/Portfolio/portfolioCard.scss
+++ b/src/components/Portfolio/portfolioCard.scss
@@ -15,7 +15,7 @@
   flex-direction: column;
   border-radius: 1rem;
   overflow: hidden;
-  margin-bottom: 5rem;
+  // margin-bottom: 5rem;
 
   &:hover {
     background-color: var(--colorPeach);
